# VoltYTM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
assets/: error.html
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: BlockReason.ts  NetworkDecision.ts  SerializedCookie.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: init.js
src-tauri/src/: adblock.rs  autostart.rs  commands.rs  discord.rs  lib.rs  main.rs  menu.rs  plugins.rs  proxy.rs  session.rs  shortcuts.rs  tray.rs  updater.rs  window.rs
src-tauri/themes/: amoled.css  catppuccin-mocha.css  dark.css  gruvbox.css
src/lib/: bridge.ts
src/plugins/: registry.ts
src/plugins/discord/: index.ts
src/plugins/lastfm/: index.ts
src/plugins/notifications/: index.ts
src/plugins/skip-silence/: index.ts
src/plugins/sponsorblock/: index.ts
src/types/: plugin.ts
src/utils/: createPlugin.ts
tests/: branding.test.ts
tools/: generate-icons.mjs
