[package]
name = "voltytm"
version = "1.0.0"
description = "A fast native desktop app for YouTube Music with plugins, media controls, and ad blocking."
authors = ["Rishabh Singh"]
license = "MIT"
repository = "https://github.com/rixabhh/VoltYTM"
edition = "2021"
rust-version = "1.85"

[lib]
name = "voltytm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voltytm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
md5 = "0.8.0"
once_cell = "1.21.3"
open = "5.3.5"
parking_lot = "0.12.5"
reqwest = { version = "0.13.4", features = ["json", "form", "cookies", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png", "image-ico", "unstable"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-http = "2.5.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ts-rs = "12.0.1"
url = "2.5.7"
urlencoding = "2.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
